Closed Bug 254510 Opened 21 years ago Closed 21 years ago

Bug 200433 regressed by patch in bug 253597

Categories

(Core :: Graphics: Image Blocking, defect)

defect
Not set
major

Tracking

()

RESOLVED FIXED

People

(Reporter: bzbarsky, Assigned: mvl)

Details

(Keywords: regression)

Attachments

(2 files)

The patch in bug 253597 regressed the fix from bug 200433 (the ShouldProcess never blocks anything now). See bug 253597 comment 9 for more information. It'd be nice to fix this before next week's freeze...
Summary: Bug 200433 regressed by patch in bug 253597 → Bug 200433 regressed by patch in bug 253597
Attached patch patch v1Splinter Review
This bug only affects third-party checks. So the testcase in bug 253597 doesn't work. The patch gets the documentURI from the node if the uri is null. It's done in nsImgManager. I'm not sure if it should be moved up, into nsContentPolicy or something. I hope my use of nsCOMptr vs normal pointers is ok.
Attachment #156986 - Flags: review?(jst)
Comment on attachment 156986 [details] [diff] [review] patch v1 r=jst
Attachment #156986 - Flags: review?(jst) → review+
I'd put this in nsContentPolicy so all content policy impls benefit from it...
moved code into nsContentPolicy
Attachment #157511 - Flags: superreview?(bzbarsky)
Comment on attachment 157511 [details] [diff] [review] alternative patch >Index: content/base/src/nsContentPolicy.cpp >+ nsIDocument *doc = node->GetOwnerDoc(); Make that an nsCOMPtr and toss in: if (!doc) { doc = do_QueryInteface(requestingContext); } With that, sr=bzbarsky
Attachment #157511 - Flags: superreview?(bzbarsky) → superreview+
Comment on attachment 157511 [details] [diff] [review] alternative patch carrying review forward
Attachment #157511 - Flags: review+
patch checked in (updated to bz's comments)
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: