fix third-party checks for images loaded as source of an iframe, by making sure there is a requestingLocation bug 254510, r=jst, sr=bz